--- a/gb/23/1/9/n13903328.md
+++ b/gb/23/1/9/n13903328.md
@@ -24,38 +24,38 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899513.md#1">安省去年发生133起火灾 廿年来最高</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899570.md#1">安省COIVD口服药处方量增 药剂师提醒注意事项</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902505.md#1">通胀高企 安省工人需最低工资20元才能维生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903332.md#1">助2人渡河非法入美国 安省男子认罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903322.md#1">多伦多大学健康网络电脑系统中断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903325.md#1">安省购买3列火车 将恢复多市至北边服务</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963921.md#1">安省司机在高速公路开得太慢被起诉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963362.md#1">4月1日起碳税上涨 对安省汽油价格有何影响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963339.md#1">10月1日起 安省最低时薪涨至16.55元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10250277.md#1" target="_blank">中共淫乱的前生今世（7）高危的情妇们</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891553.md#1">入地府改变了命运  怪胎传述转生因缘劝世人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899460.md#1">【未解之谜】预言家珍妮之二 最意外的总统选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903017.md#1">【中国禁闻】重庆药厂裁员 引发大规模抗议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902089.md#1">【舞蹈三剑客】5个秘诀！神韵舞蹈演员如何克服舞台恐惧症?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/28/n13874794.md#1">【思想领袖】严厉防疫政策 各国疫情中受重创</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901137.md#1">【秦鹏观察】老军头开骂 习退让 中南海恐起火</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901673.md#1">【一线采访】重庆核酸企业突裁员 员工怒砸厂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901563.md#1">张文宏：大范围感染正发生 许多病人白白等死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902526.md#1">王祖贤息影19年没工作 曾坦言钱一辈子花不完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901055.md#1">粤剧名伶卢海潮猝逝 同剧组近期4人病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902543.md#1">大陆女星沈月自曝：入行首部戏的片酬被偷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901092.md#1">陈乔恩自曝患睡眠呼吸中止症 已接受手术治疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901191.md#1">被误认成“翁立友太太” 谢金晶：新娘不是我</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902197.md#1">世界最快乐国家的心理学家：我们不做3件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901636.md#1">中医养生成疫后健康潮流 绿色东方美国开业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901344.md#1">2023年房价会见底吗？投资机构蠢蠢欲动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900158.md#1">【东瀛采风】一元复始 万象更新</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/9/n13903328.htm">403高速奥克维尔路段坡道8车相撞6伤</a></p><hr>
