--- a/gb/23/1/19/n13911233.md
+++ b/gb/23/1/19/n13911233.md
@@ -9,7 +9,7 @@
 <p>【大纪元2023年01月20日讯】（大纪元记者王兰多伦多报导）多伦多市警方周四（1月19日）表示，一名男子在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E8%BD%A6.md#1">开车</a>时<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9C%8B%E7%94%B5%E8%A7%86.md#1">看电视</a>，被罚款615元。警方担心会有愈来愈多驾驶者在开车时分心看电视，情况令人担忧。</p>
 <p>周三下午1点30分后，警方在Spadina Avenue及Front Street West一带截获该名男子，于是援引道路安全法，处以615元罚金。</p>
 <p>多伦多交通警察队发言人说：“尽管你的手机安放在仪表板上，你也不能边<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E8%BD%A6.md#1">开车</a>边<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9C%8B%E7%94%B5%E8%A7%86.md#1">看电视</a>。我们的队员看到一个趋势，就是愈来愈多驾驶者在开车时看电视。我们得说，这情况太糟了。”</p>
-<p>2013 年开始收集的安省车祸数据显示，每半小时就有一人在分心驾驶导致的车祸中受伤，使用手机的司机发生车祸的可能性是专注于开车的司机的四倍。</p>
+<p>2013年开始收集的安省车祸数据显示，每半小时就有一人在分心驾驶导致的车祸中受伤，使用手机的司机发生车祸的可能性是专注于开车的司机的四倍。</p>
 <p>如果司机因分心驾驶而危及他人，他们也可能因粗心驾驶而面临更多指控。</p>
 <p>责任编辑：严枫</p>
 
@@ -17,44 +17,45 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910345.md#1">高科技盗车贼手段高 多市每天平均失窃32辆车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910320.md#1">市府除雪 铲坏门前草坪 房主如何应对？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910316.md#1">约克区治疗犬为警员提供减压服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909530.md#1">多伦多医院两保安致女患者死亡被控 法官撤销此案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909483.md#1">物价高需求多 多伦多学生营养项目捉襟见肘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909479.md#1">防毒钓鱼邮件骗走士嘉堡老翁逾4万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909481.md#1">卡车撞倒灯柱砸中老妇 住院一周后身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908740.md#1">多伦多2022年最拥堵十大十字路口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908724.md#1">安省北部度假村小木屋独特遇狼体验</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963921.md#1">安省司机在高速公路开得太慢被起诉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963362.md#1">4月1日起碳税上涨 对安省汽油价格有何影响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963339.md#1">10月1日起 安省最低时薪涨至16.55元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962867.md#1">多市市长候选人要求公司提供地铁手机服务</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962760.md#1">患者去诊所测COVID病毒 好心药剂师帮付停车费</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962228.md#1">多伦多市议员提动议建魁北克至多伦多高铁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962083.md#1">安省清洁能源积分登记处接受自愿购买</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962077.md#1">技术过时 多伦多地铁内几乎打不了电话?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962033.md#1">大多区又发现一群死鹅 验出禽流感病毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962028.md#1">市议会准许TTC调用1500万储备金应急</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906972.md#1">【时事人物】梅西：三代女人造就的一代球王</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906526.md#1">【百年真相】犯四宗大罪 郭声琨下场如何？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910388.md#1">【财商天下】染疫死亡数惊世骇人 次生灾害更严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910918.md#1">【晚间新闻】多方数据显示病毒致中国人口锐减</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910321.md#1">【秦鹏观察】越南国家主席辞职 内斗下台？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13907901.md#1">法轮功创始人：中共掩盖疫情 死亡人数达4亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907772.md#1">分析：习近平政治经济学 吓坏外国投资者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909079.md#1">清华大学官员称可接受染疫再死500万 被骂翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908700.md#1">移民风波后首现身 冯小刚白癜风越来越严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909818.md#1">“BTS”Jin基础训练结束后 以助教服役</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909526.md#1">行李困机场发文求助 舒淇“图文不符”秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13909486.md#1">两影帝首度合作：郭富城秀舞技 梁朝伟展琴艺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910353.md#1">高圆圆逛菜市场尝小吃烫到表情狰狞 笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908117.md#1">吃红肉致癌？专家说这样吃红肉最健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906901.md#1">铝是神经毒素 危害大脑 如何防铝中毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905520.md#1">这种水果为何每天要吃2颗？养好肠道菌全靠它</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908835.md#1">我在航空公司招募外籍飞行员的点滴回忆（5）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908654.md#1">猫王女儿突然病逝 心脏骤停再引关注</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/19/n13911233.htm">边开车边看电视 多伦多男子被罚615元</a></p><hr>
